--- a/app.json
+++ b/app.json
@@ -60,6 +60,11 @@
       "value": "True",
       "required": false
     },
+    "UPSTREAM_REPO": {
+      "description": "FOR REAL",
+      "value": "True",
+      "required": false
+    },
   },
   "addons": [{
     "plan": "heroku-postgresql",
