--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "name": "PythonTG-Bot",
   "description": "A simple Telelgram Bot",
+  "logo": "https://telegra.ph/file/3069cf26db7bbe389ef55.jpg",
   "keywords": [
     "plugin",
     "modular",
