--- a/app.json
+++ b/app.json
@@ -57,8 +57,8 @@
       "required": false
     },
     "EXTERNAL_REPO": {
-      "description": "FOR MODE CMD",
-      "value": "True",
+      "description": "FOR MODE CMD (put True for fun",
+      "value": "",
       "required": false
     },
     "UPSTREAM_REPO": {
