--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ selenium
 setuptools
 ShazamAPI
 spamwatch
+speedtest-cli
 sqlalchemy-json
 sqlalchemy==1.3.23
 telegraph
@@ -64,6 +65,7 @@ validators
 vcsi
 wand
 wget
+yt_dlp
 
 git+https://github.com/sandy1709/Telethon@beta
 git+https://github.com/goldsmith/Wikipedia
